force-app/main/default/objects/ProductPricingByCountry__mdt/ProductPricingByCountry__mdt.object-meta.xml
<CustomObject>
    <label>Product Pricing By Country</label>
    <pluralLabel>Product Pricings By Country</pluralLabel>
</CustomObject>