force-app/main/default/objects/ProductPricingByCountry__mdt/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <description>Fee for ATM withdrawals in foreign currencies (ej. 1,7%)</description>
    <inlineHelpText>Fee for ATM withdrawals in foreign currencies (ej. 1,7%)</inlineHelpText>
    <label>ATM Fee</label>
    <precision>6</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>