force-app/main/default/objects/ProductPricingByCountry__mdt/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Card Replacement Cost</description>
    <inlineHelpText>Card Replacement Cost in € (ej. 9.90)</inlineHelpText>
    <label>Card Replacement Cost</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>