force-app/main/default/objects/ProductPricingByCountry__mdt/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <description>Cost per Calendar Month (ej. 9.90)</description>
    <inlineHelpText>Cost per Calendar Month in € (ej. 9.90)</inlineHelpText>
    <label>Monthly Fee</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>