force-app/main/default/objects/ProductPricingByCountry__mdt/fields/Product_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Plan__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <label>Product Plan</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>