force-app/main/default/objects/ProductPricingByCountry__mdt/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Date from which the registration is valid</description>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>