force-app/main/default/objects/ProductPricingByCountry__mdt/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>Date until which the registration is valid</description>
    <label>Valid To Date</label>
    <type>Date</type>
</CustomField>